--- a/css/style.css
+++ b/css/style.css
@@ -3205,3 +3205,176 @@ body{
 }
 /* Blog Box section css end  */
 /* Blog page css end  */
+/* Blog Classic page css start  */
+#blog_classic_box{
+    margin-top: 99px;
+}
+#blog_classic_box .blog_classic_box_item{
+    margin-bottom: 40px;
+}
+#blog_classic_box .blog_classic_box_item .box_img{
+    position: relative;
+}
+#blog_classic_box .blog_classic_box_item .box_img .play_btn{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #FF6F61;
+    font-size: 25px;
+    width: 100px;
+    height: 100px;
+    background: #ffffff;
+    text-align: center;
+    line-height: 100px;
+    border-radius: 50%;
+    transition: 0.3s;
+}
+#blog_classic_box .blog_classic_box_item .box_img .play_btn:hover{
+    background: #FF6F61;
+    color: #ffffff;
+}
+#blog_classic_box .blog_classic_box_item .box_img .play_btn::after,
+#blog_classic_box .blog_classic_box_item .box_img .play_btn::before{
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ffffff;
+    z-index: -1;
+    border-radius: 50%;
+    -webkit-transition: all ease 0.4s;
+    transition: all ease 0.4s;
+    animation: ripple 2s ease-in-out infinite;
+}
+#blog_classic_box .blog_classic_box_item_body{
+    padding-top: 35px;
+    padding-left: 41px;
+    border-top: none;
+}
+#blog_classic_box .blog_classic_box_item_body .blog_body_meta a{
+    margin-right: 14px;
+    font-size: 16px;
+    font-weight: 400;
+    color: #444444;
+    transition: 0.3s;
+}
+#blog_classic_box .blog_classic_box_item_body .blog_body_meta a:hover{
+    color: #FF6F61;
+}
+#blog_classic_box .blog_classic_box_item_body .blog_body_meta a i{
+    padding-right: 9px;
+}
+#blog_classic_box .blog_classic_box_item_body .blog_body_meta a:first-child{
+    border-right: 2px solid #BDBDBD;
+    padding-right: 20px;
+}
+#blog_classic_box .blog_classic_box_item_body .blog_title{
+    margin-top: 18px;
+}
+#blog_classic_box .blog_classic_box_item_body .blog_title h4 a{
+    font-size: 30px;
+    font-weight: 700;
+    color: #11161E;
+    text-transform: capitalize;
+    margin-top: 18px;
+    transition: 0.3s;
+}
+#blog_classic_box .blog_classic_box_item_body .blog_title h4 a:hover{
+    color: #FF6F61;
+}
+#blog_classic_box .blog_classic_box_item_body p{
+    margin: 23px 0;
+    font-size: 15px;
+    font-weight: 400;
+    color: #444444;
+    line-height: 28px;
+    text-align: justify;
+    margin-right: 40px;
+}
+#blog_classic_box .blog_classic_box_item_body .read_btn{
+    font-size: 16px;
+    font-weight: 600;
+    color: #444444;
+    text-transform: capitalize;
+    transition: 0.3s;
+    margin-bottom: 38px;
+    display: inline-block;
+}
+#blog_classic_box .blog_classic_box_item_body .read_btn:hover{
+    color: #FF6F61;
+}
+#blog_classic_box .blog_classic_box_item_body .read_btn i{
+    margin-left: 7px;
+    position: relative;
+    top: 2px;
+}
+
+
+#blog_classic_box .blog_classic_post_showing{
+    padding-bottom: 13px;
+    border-bottom: 2px solid black;
+    margin-top: 20px;
+}
+#blog_classic_box .blog_classic_post_btn{
+    margin-top: 20px;
+}
+#blog_classic_box .blog_classic_post_btn nav ul{
+    margin-left: 110px;
+}
+#blog_classic_box .blog_classic_post_btn nav ul li{
+    margin-right: 10px;
+}
+#blog_classic_box .blog_classic_post_btn nav ul li a{
+    color: #444444;
+}
+#blog_classic_box .blog_classic_post_btn nav ul li a:hover{
+    background: #11161E;
+    color: #ffffff;
+}
+#blog_classic_box .blog_classic_post_btn nav ul li.active_pn a{
+    color: #ffffff;
+    background: #11161E;
+}
+/* Blog Classic page css end  */
+/* Blog Classic whit Sidebar page css start  */
+/* Blog Sidebar Banner section css start  */
+#blog_sidebar{
+    background: url(../img/blog_sidebar_bg_.jpg);
+    background-position: center;
+    background-size: cover;
+    height: 400px;
+    position: relative;
+    z-index: 1;
+}
+#blog_sidebar::before{
+    content: '';
+    position: absolute;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.6);
+    z-index: -1;
+}
+#blog_sidebar .blog_sidebar_content h2{
+    font-size: 42px;
+    font-weight: 700;
+    color: #ffffff;
+    text-transform: capitalize;
+    margin-bottom: 20px;
+}
+#blog_sidebar .blog_sidebar_content p{
+    font-size: 16px;
+    font-weight: 400;
+    color: #ffffff;
+    word-spacing: 2px;
+}
+#blog_sidebar .blog_sidebar_content p span a{
+    color: #ffffff;
+    transition: 0.3s;
+}
+#blog_sidebar .blog_sidebar_content p span a:hover{
+    color: #FF6F61;
+}
+/* Blog Sidebar Banner section css end  */
+/* Blog Classic whit Sidebar page css end  */
